PHOENIX-363 | Ramki - Code clean up and direct model acess from view page